feat: get motion
